[tool.poetry]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue system"
authors = ["QueueCTL Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "queuectl"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
rich = "^13.7.0"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

